// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Join group tests should match the snapshot when NO user is logged in 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <JoinGroup
    group={Object {}}
    history={
        Array [
            "/login",
          ]
    }
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="join-group-component"
>
          <div
                    className="join-group-header"
          >
                    <h4>
                              JOIN A GROUP
                    </h4>
          </div>
          <div
                    className="join-container"
          >
                    <div>
                              <div
                                        className="current-group"
                              >
                                        <h5>
                                                  You are not current a member of a group!
                                        </h5>
                              </div>
                              <div
                                        className="passphrase"
                              >
                                        <h5>
                                                  To join a group, enter your group passphrase
                                        </h5>
                                        <input
                                                  name="passphrase"
                                                  onChange={[Function]}
                                                  placeholder={undefined}
                                                  value=""
                                        />
                              </div>
                              <button
                                        onClick={[Function]}
                              >
                                        SUBMIT
                              </button>
                    </div>
          </div>
</div>,
        <div
          className="link-holder"
>
          <NavLink
                    activeClassName="active"
                    ariaCurrent="true"
                    className="create-group-link"
                    to="/creategroup"
          >
                    CREATE NEW GROUP
          </NavLink>
</div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="join-group-header"
>
              <h4>
                            JOIN A GROUP
              </h4>
</div>,
            <div
              className="join-container"
>
              <div>
                            <div
                                          className="current-group"
                            >
                                          <h5>
                                                        You are not current a member of a group!
                                          </h5>
                            </div>
                            <div
                                          className="passphrase"
                            >
                                          <h5>
                                                        To join a group, enter your group passphrase
                                          </h5>
                                          <input
                                                        name="passphrase"
                                                        onChange={[Function]}
                                                        placeholder={undefined}
                                                        value=""
                                          />
                            </div>
                            <button
                                          onClick={[Function]}
                            >
                                          SUBMIT
                            </button>
              </div>
</div>,
          ],
          "className": "join-group-component",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h4>
                JOIN A GROUP
</h4>,
              "className": "join-group-header",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "JOIN A GROUP",
              },
              "ref": null,
              "rendered": "JOIN A GROUP",
              "type": "h4",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div>
                  <div
                                    className="current-group"
                  >
                                    <h5>
                                                      You are not current a member of a group!
                                    </h5>
                  </div>
                  <div
                                    className="passphrase"
                  >
                                    <h5>
                                                      To join a group, enter your group passphrase
                                    </h5>
                                    <input
                                                      name="passphrase"
                                                      onChange={[Function]}
                                                      placeholder={undefined}
                                                      value=""
                                    />
                  </div>
                  <button
                                    onClick={[Function]}
                  >
                                    SUBMIT
                  </button>
</div>,
                null,
              ],
              "className": "join-container",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="current-group"
>
                      <h5>
                                            You are not current a member of a group!
                      </h5>
</div>,
                    <div
                      className="passphrase"
>
                      <h5>
                                            To join a group, enter your group passphrase
                      </h5>
                      <input
                                            name="passphrase"
                                            onChange={[Function]}
                                            placeholder={undefined}
                                            value=""
                      />
</div>,
                    <button
                      onClick={[Function]}
>
                      SUBMIT
</button>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <h5>
                        You are not current a member of a group!
</h5>,
                      "className": "current-group",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "You are not current a member of a group!",
                      },
                      "ref": null,
                      "rendered": "You are not current a member of a group!",
                      "type": "h5",
                    },
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <h5>
                          To join a group, enter your group passphrase
</h5>,
                        <input
                          name="passphrase"
                          onChange={[Function]}
                          placeholder={undefined}
                          value=""
/>,
                      ],
                      "className": "passphrase",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "To join a group, enter your group passphrase",
                        },
                        "ref": null,
                        "rendered": "To join a group, enter your group passphrase",
                        "type": "h5",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "name": "passphrase",
                          "onChange": [Function],
                          "placeholder": undefined,
                          "value": "",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "input",
                      },
                    ],
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "SUBMIT",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "SUBMIT",
                    "type": "button",
                  },
                ],
                "type": "div",
              },
              null,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="create-group-link"
            to="/creategroup"
>
            CREATE NEW GROUP
</NavLink>,
          "className": "link-holder",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "ariaCurrent": "true",
            "children": "CREATE NEW GROUP",
            "className": "create-group-link",
            "to": "/creategroup",
          },
          "ref": null,
          "rendered": "CREATE NEW GROUP",
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="join-group-component"
>
            <div
                        className="join-group-header"
            >
                        <h4>
                                    JOIN A GROUP
                        </h4>
            </div>
            <div
                        className="join-container"
            >
                        <div>
                                    <div
                                                className="current-group"
                                    >
                                                <h5>
                                                            You are not current a member of a group!
                                                </h5>
                                    </div>
                                    <div
                                                className="passphrase"
                                    >
                                                <h5>
                                                            To join a group, enter your group passphrase
                                                </h5>
                                                <input
                                                            name="passphrase"
                                                            onChange={[Function]}
                                                            placeholder={undefined}
                                                            value=""
                                                />
                                    </div>
                                    <button
                                                onClick={[Function]}
                                    >
                                                SUBMIT
                                    </button>
                        </div>
            </div>
</div>,
          <div
            className="link-holder"
>
            <NavLink
                        activeClassName="active"
                        ariaCurrent="true"
                        className="create-group-link"
                        to="/creategroup"
            >
                        CREATE NEW GROUP
            </NavLink>
</div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="join-group-header"
>
                <h4>
                                JOIN A GROUP
                </h4>
</div>,
              <div
                className="join-container"
>
                <div>
                                <div
                                                className="current-group"
                                >
                                                <h5>
                                                                You are not current a member of a group!
                                                </h5>
                                </div>
                                <div
                                                className="passphrase"
                                >
                                                <h5>
                                                                To join a group, enter your group passphrase
                                                </h5>
                                                <input
                                                                name="passphrase"
                                                                onChange={[Function]}
                                                                placeholder={undefined}
                                                                value=""
                                                />
                                </div>
                                <button
                                                onClick={[Function]}
                                >
                                                SUBMIT
                                </button>
                </div>
</div>,
            ],
            "className": "join-group-component",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h4>
                  JOIN A GROUP
</h4>,
                "className": "join-group-header",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "JOIN A GROUP",
                },
                "ref": null,
                "rendered": "JOIN A GROUP",
                "type": "h4",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div>
                    <div
                                        className="current-group"
                    >
                                        <h5>
                                                            You are not current a member of a group!
                                        </h5>
                    </div>
                    <div
                                        className="passphrase"
                    >
                                        <h5>
                                                            To join a group, enter your group passphrase
                                        </h5>
                                        <input
                                                            name="passphrase"
                                                            onChange={[Function]}
                                                            placeholder={undefined}
                                                            value=""
                                        />
                    </div>
                    <button
                                        onClick={[Function]}
                    >
                                        SUBMIT
                    </button>
</div>,
                  null,
                ],
                "className": "join-container",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div
                        className="current-group"
>
                        <h5>
                                                You are not current a member of a group!
                        </h5>
</div>,
                      <div
                        className="passphrase"
>
                        <h5>
                                                To join a group, enter your group passphrase
                        </h5>
                        <input
                                                name="passphrase"
                                                onChange={[Function]}
                                                placeholder={undefined}
                                                value=""
                        />
</div>,
                      <button
                        onClick={[Function]}
>
                        SUBMIT
</button>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <h5>
                          You are not current a member of a group!
</h5>,
                        "className": "current-group",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "You are not current a member of a group!",
                        },
                        "ref": null,
                        "rendered": "You are not current a member of a group!",
                        "type": "h5",
                      },
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <h5>
                            To join a group, enter your group passphrase
</h5>,
                          <input
                            name="passphrase"
                            onChange={[Function]}
                            placeholder={undefined}
                            value=""
/>,
                        ],
                        "className": "passphrase",
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "To join a group, enter your group passphrase",
                          },
                          "ref": null,
                          "rendered": "To join a group, enter your group passphrase",
                          "type": "h5",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "name": "passphrase",
                            "onChange": [Function],
                            "placeholder": undefined,
                            "value": "",
                          },
                          "ref": null,
                          "rendered": null,
                          "type": "input",
                        },
                      ],
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "SUBMIT",
                        "onClick": [Function],
                      },
                      "ref": null,
                      "rendered": "SUBMIT",
                      "type": "button",
                    },
                  ],
                  "type": "div",
                },
                null,
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <NavLink
              activeClassName="active"
              ariaCurrent="true"
              className="create-group-link"
              to="/creategroup"
>
              CREATE NEW GROUP
</NavLink>,
            "className": "link-holder",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "ariaCurrent": "true",
              "children": "CREATE NEW GROUP",
              "className": "create-group-link",
              "to": "/creategroup",
            },
            "ref": null,
            "rendered": "CREATE NEW GROUP",
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Join group tests should match the snapshot when a user is logged in 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <JoinGroup
    group={
        Object {
            "administrator_id": 95,
            "created_date": "2017-10-18T18:34:30.017Z",
            "group_id": 1,
            "group_name": "Turing",
            "group_passphrase": "9139z",
            "weekly_points": 100,
          }
    }
    history={Array []}
    user={
        Object {
            "authrocket_id": "usr_0vXWX9jSRkbUjLGsOb9S8r",
            "created_date": "2017-11-18T18:34:30.017Z",
            "email": "cpavin@usopen.com",
            "group_id": 1,
            "name": "Corey Pavin",
            "user_id": 95,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="join-group-component"
>
          <div
                    className="join-group-header"
          >
                    <h4>
                              JOIN A GROUP
                    </h4>
          </div>
          <div
                    className="join-container"
          >
                    <div>
                              <div
                                        className="current-group"
                              >
                                        <h5>
                                                  You are currently a member of: 
                                        </h5>
                                        <h4>
                                                  <Link
                                                            replace={false}
                                                            to="/group"
                                                  >
                                                            Turing
                                                  </Link>
                                        </h4>
                              </div>
                              <div
                                        className="passphrase"
                              >
                                        <h5>
                                                  Your group's passphrase is:
                                        </h5>
                                        <input
                                                  name="passphrase"
                                                  onChange={[Function]}
                                                  placeholder="9139z"
                                                  value=""
                                        />
                              </div>
                              <div
                                        className="join-group-last"
                              >
                                        <h5>
                                                  To switch groups, simply enter your new group's passphrase in the box.
                                        </h5>
                                        <img
                                                  className="arrow-graphic"
                                                  src="curved-arrow.svg"
                                        />
                              </div>
                              <button
                                        onClick={[Function]}
                              >
                                        SUBMIT
                              </button>
                    </div>
          </div>
</div>,
        <div
          className="link-holder"
>
          <NavLink
                    activeClassName="active"
                    ariaCurrent="true"
                    className="create-group-link"
                    to="/creategroup"
          >
                    CREATE NEW GROUP
          </NavLink>
</div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="join-group-header"
>
              <h4>
                            JOIN A GROUP
              </h4>
</div>,
            <div
              className="join-container"
>
              <div>
                            <div
                                          className="current-group"
                            >
                                          <h5>
                                                        You are currently a member of: 
                                          </h5>
                                          <h4>
                                                        <Link
                                                                      replace={false}
                                                                      to="/group"
                                                        >
                                                                      Turing
                                                        </Link>
                                          </h4>
                            </div>
                            <div
                                          className="passphrase"
                            >
                                          <h5>
                                                        Your group's passphrase is:
                                          </h5>
                                          <input
                                                        name="passphrase"
                                                        onChange={[Function]}
                                                        placeholder="9139z"
                                                        value=""
                                          />
                            </div>
                            <div
                                          className="join-group-last"
                            >
                                          <h5>
                                                        To switch groups, simply enter your new group's passphrase in the box.
                                          </h5>
                                          <img
                                                        className="arrow-graphic"
                                                        src="curved-arrow.svg"
                                          />
                            </div>
                            <button
                                          onClick={[Function]}
                            >
                                          SUBMIT
                            </button>
              </div>
</div>,
          ],
          "className": "join-group-component",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h4>
                JOIN A GROUP
</h4>,
              "className": "join-group-header",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "JOIN A GROUP",
              },
              "ref": null,
              "rendered": "JOIN A GROUP",
              "type": "h4",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div>
                  <div
                                    className="current-group"
                  >
                                    <h5>
                                                      You are currently a member of: 
                                    </h5>
                                    <h4>
                                                      <Link
                                                                        replace={false}
                                                                        to="/group"
                                                      >
                                                                        Turing
                                                      </Link>
                                    </h4>
                  </div>
                  <div
                                    className="passphrase"
                  >
                                    <h5>
                                                      Your group's passphrase is:
                                    </h5>
                                    <input
                                                      name="passphrase"
                                                      onChange={[Function]}
                                                      placeholder="9139z"
                                                      value=""
                                    />
                  </div>
                  <div
                                    className="join-group-last"
                  >
                                    <h5>
                                                      To switch groups, simply enter your new group's passphrase in the box.
                                    </h5>
                                    <img
                                                      className="arrow-graphic"
                                                      src="curved-arrow.svg"
                                    />
                  </div>
                  <button
                                    onClick={[Function]}
                  >
                                    SUBMIT
                  </button>
</div>,
                null,
              ],
              "className": "join-container",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="current-group"
>
                      <h5>
                                            You are currently a member of: 
                      </h5>
                      <h4>
                                            <Link
                                                                  replace={false}
                                                                  to="/group"
                                            >
                                                                  Turing
                                            </Link>
                      </h4>
</div>,
                    <div
                      className="passphrase"
>
                      <h5>
                                            Your group's passphrase is:
                      </h5>
                      <input
                                            name="passphrase"
                                            onChange={[Function]}
                                            placeholder="9139z"
                                            value=""
                      />
</div>,
                    <div
                      className="join-group-last"
>
                      <h5>
                                            To switch groups, simply enter your new group's passphrase in the box.
                      </h5>
                      <img
                                            className="arrow-graphic"
                                            src="curved-arrow.svg"
                      />
</div>,
                    <button
                      onClick={[Function]}
>
                      SUBMIT
</button>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <h5>
                          You are currently a member of: 
</h5>,
                        <h4>
                          <Link
                                                    replace={false}
                                                    to="/group"
                          >
                                                    Turing
                          </Link>
</h4>,
                      ],
                      "className": "current-group",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "You are currently a member of: ",
                        },
                        "ref": null,
                        "rendered": "You are currently a member of: ",
                        "type": "h5",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <Link
                            replace={false}
                            to="/group"
>
                            Turing
</Link>,
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "class",
                          "props": Object {
                            "children": "Turing",
                            "replace": false,
                            "to": "/group",
                          },
                          "ref": null,
                          "rendered": "Turing",
                          "type": [Function],
                        },
                        "type": "h4",
                      },
                    ],
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <h5>
                          Your group's passphrase is:
</h5>,
                        <input
                          name="passphrase"
                          onChange={[Function]}
                          placeholder="9139z"
                          value=""
/>,
                      ],
                      "className": "passphrase",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Your group's passphrase is:",
                        },
                        "ref": null,
                        "rendered": "Your group's passphrase is:",
                        "type": "h5",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "name": "passphrase",
                          "onChange": [Function],
                          "placeholder": "9139z",
                          "value": "",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "input",
                      },
                    ],
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <h5>
                          To switch groups, simply enter your new group's passphrase in the box.
</h5>,
                        <img
                          className="arrow-graphic"
                          src="curved-arrow.svg"
/>,
                      ],
                      "className": "join-group-last",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "To switch groups, simply enter your new group's passphrase in the box.",
                        },
                        "ref": null,
                        "rendered": "To switch groups, simply enter your new group's passphrase in the box.",
                        "type": "h5",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "arrow-graphic",
                          "src": "curved-arrow.svg",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "img",
                      },
                    ],
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "SUBMIT",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "SUBMIT",
                    "type": "button",
                  },
                ],
                "type": "div",
              },
              null,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="create-group-link"
            to="/creategroup"
>
            CREATE NEW GROUP
</NavLink>,
          "className": "link-holder",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "ariaCurrent": "true",
            "children": "CREATE NEW GROUP",
            "className": "create-group-link",
            "to": "/creategroup",
          },
          "ref": null,
          "rendered": "CREATE NEW GROUP",
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="join-group-component"
>
            <div
                        className="join-group-header"
            >
                        <h4>
                                    JOIN A GROUP
                        </h4>
            </div>
            <div
                        className="join-container"
            >
                        <div>
                                    <div
                                                className="current-group"
                                    >
                                                <h5>
                                                            You are currently a member of: 
                                                </h5>
                                                <h4>
                                                            <Link
                                                                        replace={false}
                                                                        to="/group"
                                                            >
                                                                        Turing
                                                            </Link>
                                                </h4>
                                    </div>
                                    <div
                                                className="passphrase"
                                    >
                                                <h5>
                                                            Your group's passphrase is:
                                                </h5>
                                                <input
                                                            name="passphrase"
                                                            onChange={[Function]}
                                                            placeholder="9139z"
                                                            value=""
                                                />
                                    </div>
                                    <div
                                                className="join-group-last"
                                    >
                                                <h5>
                                                            To switch groups, simply enter your new group's passphrase in the box.
                                                </h5>
                                                <img
                                                            className="arrow-graphic"
                                                            src="curved-arrow.svg"
                                                />
                                    </div>
                                    <button
                                                onClick={[Function]}
                                    >
                                                SUBMIT
                                    </button>
                        </div>
            </div>
</div>,
          <div
            className="link-holder"
>
            <NavLink
                        activeClassName="active"
                        ariaCurrent="true"
                        className="create-group-link"
                        to="/creategroup"
            >
                        CREATE NEW GROUP
            </NavLink>
</div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="join-group-header"
>
                <h4>
                                JOIN A GROUP
                </h4>
</div>,
              <div
                className="join-container"
>
                <div>
                                <div
                                                className="current-group"
                                >
                                                <h5>
                                                                You are currently a member of: 
                                                </h5>
                                                <h4>
                                                                <Link
                                                                                replace={false}
                                                                                to="/group"
                                                                >
                                                                                Turing
                                                                </Link>
                                                </h4>
                                </div>
                                <div
                                                className="passphrase"
                                >
                                                <h5>
                                                                Your group's passphrase is:
                                                </h5>
                                                <input
                                                                name="passphrase"
                                                                onChange={[Function]}
                                                                placeholder="9139z"
                                                                value=""
                                                />
                                </div>
                                <div
                                                className="join-group-last"
                                >
                                                <h5>
                                                                To switch groups, simply enter your new group's passphrase in the box.
                                                </h5>
                                                <img
                                                                className="arrow-graphic"
                                                                src="curved-arrow.svg"
                                                />
                                </div>
                                <button
                                                onClick={[Function]}
                                >
                                                SUBMIT
                                </button>
                </div>
</div>,
            ],
            "className": "join-group-component",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h4>
                  JOIN A GROUP
</h4>,
                "className": "join-group-header",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "JOIN A GROUP",
                },
                "ref": null,
                "rendered": "JOIN A GROUP",
                "type": "h4",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div>
                    <div
                                        className="current-group"
                    >
                                        <h5>
                                                            You are currently a member of: 
                                        </h5>
                                        <h4>
                                                            <Link
                                                                                replace={false}
                                                                                to="/group"
                                                            >
                                                                                Turing
                                                            </Link>
                                        </h4>
                    </div>
                    <div
                                        className="passphrase"
                    >
                                        <h5>
                                                            Your group's passphrase is:
                                        </h5>
                                        <input
                                                            name="passphrase"
                                                            onChange={[Function]}
                                                            placeholder="9139z"
                                                            value=""
                                        />
                    </div>
                    <div
                                        className="join-group-last"
                    >
                                        <h5>
                                                            To switch groups, simply enter your new group's passphrase in the box.
                                        </h5>
                                        <img
                                                            className="arrow-graphic"
                                                            src="curved-arrow.svg"
                                        />
                    </div>
                    <button
                                        onClick={[Function]}
                    >
                                        SUBMIT
                    </button>
</div>,
                  null,
                ],
                "className": "join-container",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div
                        className="current-group"
>
                        <h5>
                                                You are currently a member of: 
                        </h5>
                        <h4>
                                                <Link
                                                                        replace={false}
                                                                        to="/group"
                                                >
                                                                        Turing
                                                </Link>
                        </h4>
</div>,
                      <div
                        className="passphrase"
>
                        <h5>
                                                Your group's passphrase is:
                        </h5>
                        <input
                                                name="passphrase"
                                                onChange={[Function]}
                                                placeholder="9139z"
                                                value=""
                        />
</div>,
                      <div
                        className="join-group-last"
>
                        <h5>
                                                To switch groups, simply enter your new group's passphrase in the box.
                        </h5>
                        <img
                                                className="arrow-graphic"
                                                src="curved-arrow.svg"
                        />
</div>,
                      <button
                        onClick={[Function]}
>
                        SUBMIT
</button>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <h5>
                            You are currently a member of: 
</h5>,
                          <h4>
                            <Link
                                                        replace={false}
                                                        to="/group"
                            >
                                                        Turing
                            </Link>
</h4>,
                        ],
                        "className": "current-group",
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "You are currently a member of: ",
                          },
                          "ref": null,
                          "rendered": "You are currently a member of: ",
                          "type": "h5",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": <Link
                              replace={false}
                              to="/group"
>
                              Turing
</Link>,
                          },
                          "ref": null,
                          "rendered": Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "class",
                            "props": Object {
                              "children": "Turing",
                              "replace": false,
                              "to": "/group",
                            },
                            "ref": null,
                            "rendered": "Turing",
                            "type": [Function],
                          },
                          "type": "h4",
                        },
                      ],
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <h5>
                            Your group's passphrase is:
</h5>,
                          <input
                            name="passphrase"
                            onChange={[Function]}
                            placeholder="9139z"
                            value=""
/>,
                        ],
                        "className": "passphrase",
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "Your group's passphrase is:",
                          },
                          "ref": null,
                          "rendered": "Your group's passphrase is:",
                          "type": "h5",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "name": "passphrase",
                            "onChange": [Function],
                            "placeholder": "9139z",
                            "value": "",
                          },
                          "ref": null,
                          "rendered": null,
                          "type": "input",
                        },
                      ],
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <h5>
                            To switch groups, simply enter your new group's passphrase in the box.
</h5>,
                          <img
                            className="arrow-graphic"
                            src="curved-arrow.svg"
/>,
                        ],
                        "className": "join-group-last",
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "To switch groups, simply enter your new group's passphrase in the box.",
                          },
                          "ref": null,
                          "rendered": "To switch groups, simply enter your new group's passphrase in the box.",
                          "type": "h5",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "className": "arrow-graphic",
                            "src": "curved-arrow.svg",
                          },
                          "ref": null,
                          "rendered": null,
                          "type": "img",
                        },
                      ],
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "SUBMIT",
                        "onClick": [Function],
                      },
                      "ref": null,
                      "rendered": "SUBMIT",
                      "type": "button",
                    },
                  ],
                  "type": "div",
                },
                null,
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <NavLink
              activeClassName="active"
              ariaCurrent="true"
              className="create-group-link"
              to="/creategroup"
>
              CREATE NEW GROUP
</NavLink>,
            "className": "link-holder",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "ariaCurrent": "true",
              "children": "CREATE NEW GROUP",
              "className": "create-group-link",
              "to": "/creategroup",
            },
            "ref": null,
            "rendered": "CREATE NEW GROUP",
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
